--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "peerDependencies": {
     "typescript": "^5"
-  }
+  },
+  "dependencies": {
+	"googleapis": "^140.0.1",
+	"whatsapp-web.js": "^1.25.0",
+	"node-cron": "^3.0.3",
+	"qrcode-terminal": "^0.12.0"
+	}
+
 }
